fullSandbox11072023/force-app/main/default/objects/KOL_KDM__c/KOL_KDM__c.object-meta.xml
<CustomObject>
    <label>KOL &amp; KDM</label>
    <nameField>
        <displayFormat>TFX{0000}</displayFormat>
        <label>KOL &amp; KDM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KOL &amp; KDM&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>