fullSandbox11072023/force-app/main/default/objects/KOL_KDM__c/fields/Business_Group__c.field-meta.xml
<CustomField>
    <fullName>Business_Group__c</fullName>
    <label>Business Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardiac</fullName>
            </value>
            <value>
                <fullName>Radiology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>