fullSandbox11072023/force-app/main/default/objects/KOL_KDM__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A&amp;EMS</fullName>
            </value>
            <value>
                <fullName>Cardiac</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>