fullSandbox11072023/force-app/main/default/objects/KOL_KDM__c/fields/Business_Unit_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Sub_Group__c</fullName>
    <label>Business Unit Sub-Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IABP</fullName>
            </value>
            <value>
                <fullName>Interventional</fullName>
            </value>
            <value>
                <fullName>Vascular Access</fullName>
            </value>
            <value>
                <fullName>NIV</fullName>
            </value>
            <value>
                <fullName>IPH</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Ventilation</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>A&amp;EMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>