fullSandbox11072023/force-app/main/default/objects/KOL_KDM__c/fields/KOL_KDM__c.field-meta.xml
<CustomField>
    <fullName>KOL_KDM__c</fullName>
    <label>KOL &amp; KDM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KOL &amp; KDM&apos;s</relationshipLabel>
    <relationshipName>KOL_KDM_s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>