fullSandbox11072023/force-app/main/default/objects/KOL_KDM__c/fields/Preferred_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Supplier__c</fullName>
    <label>Preferred Supplier</label>
    <type>TextArea</type>
</CustomField>