fullSandbox11072023/force-app/main/default/objects/KOL_KDM__c/fields/Supports_Teleflex__c.field-meta.xml
<CustomField>
    <fullName>Supports_Teleflex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supports Teleflex</label>
    <type>Checkbox</type>
</CustomField>